versão para module em snodejs

--- a/demo/css/demo-new.css
+++ b/demo/css/demo-new.css
@@ -55,11 +55,11 @@ body {
     position: relative;
     font-size: 80%;
     margin-right: auto;
-    width: 850px;
+    width: 98%;
     border-left: 2px solid #456;
     border-right: 2px solid #456;
     border-bottom: 2px solid #456;
-    height: 600px;
+    height: 750px;
     overflow: hidden;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
