--- a/demo/css/demo-new.css
+++ b/demo/css/demo-new.css
@@ -2,113 +2,78 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
- 	src:local('Open Sans'), 
- 		local('OpenSans'),
- 		url("../font/OpenSans-Regular.ttf") format('truetype'),
- 		url("../font/OpenSans.woff") format('woff'); 		
+  src:local('Open Sans'),
+  local('OpenSans'),
+  url("../font/OpenSans-Regular.ttf") format('truetype'),
+  url("../font/OpenSans.woff") format('woff');
 }
 
 body {
     padding:0;
     margin:0;
-    background-color:white;    
-    font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    text-align:center;	
-}
-#headerWrapper {
-	width:100%;
-	background-color:black;
-	position:fixed;
-	top:0;left:0;
-    z-index:10000;
-	height:44px;
-	padding:0;
-	border-bottom:1px solid #999;
-    box-shadow: 0px 2px 19px #aaa;
-   -o-box-shadow: 0px 2px 19px #aaa;
-   -webkit-box-shadow: 0px 2px 19px #aaa;
-   -moz-box-shadow: 0px 2px 19px #aaa;
-   
-   opacity:0.8;
-}
-
-#header {
-	margin-top:0;
-    height:44px;
-    font-size:80%;
-	margin-left:auto;
-	margin-right:auto;    
-    width:950px;
-    background-image:url(../../img/logo_bw_44h.jpg);
-    background-repeat:no-repeat;    
-}
-
-#intro {
-	margin-top:59px;
-}
-
- #main {
-    /* these two margins settings are here just to ensure that jsPlumb handles
-    margins properly.*/  
-    margin-top:44px;
-    margin-left: auto;
-    position: relative;
-    font-size: 80%;
-    margin-right: auto;
-    width: 98%;
-    border-left: 2px solid #456;
-    border-right: 2px solid #456;
-    border-bottom: 2px solid #456;
-    height: 750px;
-    overflow: hidden;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color:#eaedef;
-}
-
-#sidebar {            
-    margin-left:auto;
-	margin-right:auto;
-    width:800px;        
-    font-size:13px;    
-}
-
-
-/* demo elements */
-
-.menu,#render, #explanation { 
-    
-	background-color:#fff;	    
-}
-
-.menu {    
-    height: 15px;
-	float:right;
-    padding-top:1em;
-    padding-bottom:0.4em;   
-    background-color: transparent;
-	margin-right:30px;
-}
-
-#render {
-	padding-top:2px;
-    margin-left:auto;
-	margin-right:auto;
-    z-index:5000;
-	margin-top:0px;  
-    text-align: center;
     background-color:white;
+    font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-align:center;
 }
 
-#render ul {
-    padding-left:1em;
+/*Header*/
+.headtop {
+    height:40px;
+    background-color: #2c3e50;
+    padding-top: 10px;
+    padding-left: 6%;
 }
-#render ul li {
-    list-style-type:none;
+
+.headtop a{
+    float: left;
 }
-#render h5 {
-    display:inline;
+
+/*main container*/
+#main {
+    margin-top:12px;
+    font-size: 80%;
+    width: 100%;
+    border: 1px dotted #ccc;
+    height: 862px;
+    overflow: hidden;
+    background-color:#f1f1f1;
+    position:relative;
 }
+
+/*nav*/
+#accordion{
+    width:200px !important;
+    height:100%;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+/*aside*/
+#properties{
+    background-color: #f1f1f1;
+    border: 1px dotted #ccc;
+    height: 560px;
+    margin-top: 12px;
+}
+
+#testBox{
+    background-color: #f1f1f1;
+    border: 1px dotted #ccc;
+    height: 294px;
+    margin-top: 10px;
+}
+
+/*Footer*/
+.foot{
+    height:20px;
+}
+
+
+
+
+
+
+/*lib config*/
 
 .otherLibraries {
     display:inline;
@@ -116,7 +81,7 @@ body {
 
 a, a:visited {
     text-decoration:none;
-    color:#01a3c6;    
+    color:#01a3c6;
     font-family:helvetica;
     padding:0.3em;
     border-radius:0.2em;
@@ -130,18 +95,19 @@ a:hover {
 	color:rgb(189,11,11) !important;
 }
 
-.window, .label { 
+.window, .label {
     background-color:white;
     text-align:center;
     z-index:23;
-	cursor:pointer;
-	box-shadow: 2px 2px 19px #aaa;
-   -o-box-shadow: 2px 2px 19px #aaa;
-   -webkit-box-shadow: 2px 2px 19px #aaa;
-   -moz-box-shadow: 2px 2px 19px #aaa;
-    
+    cursor:pointer;
+    box-shadow: 2px 2px 19px #aaa;
+    -o-box-shadow: 2px 2px 19px #aaa;
+    -webkit-box-shadow: 2px 2px 19px #aaa;
+    -moz-box-shadow: 2px 2px 19px #aaa;
+
 }
-path, ._jsPlumb_endpoint { cursor:pointer; }
+
+.path, ._jsPlumb_endpoint { cursor:pointer; }
 
 /* z index stuff */
 
